@@ -469,6 +469,16 @@
 	"apihelp-query+allredirects-example-unique": "{{doc-apihelp-example|query+allredirects}}",
 	"apihelp-query+allredirects-example-unique-generator": "{{doc-apihelp-example|query+allredirects}}",
 	"apihelp-query+allredirects-example-generator": "{{doc-apihelp-example|query+allredirects}}",
+	"apihelp-query+allrevisions-description": "{{apihelp-description|query+allrevisions}}",
+	"apihelp-query+allrevisions-param-end": "{{apihelp-param|query+allrevisions|end}}",
+	"apihelp-query+allrevisions-param-excludeuser": "{{apihelp-param|query+allrevisions|excludeuser}}",
+	"apihelp-query+allrevisions-param-generatetitles": "{{apihelp-param|query+allrevisions|generatetitles}}",
+	"apihelp-query+allrevisions-param-namespace": "{{apihelp-param|query+allrevisions|namespace}}",
+	"apihelp-query+allrevisions-param-start": "{{apihelp-param|query+allrevisions|start}}",
+	"apihelp-query+allrevisions-param-tag": "{{apihelp-param|query+allrevisions|tag}}",
+	"apihelp-query+allrevisions-param-user": "{{apihelp-param|query+allrevisions|user}}",
+	"apihelp-query+allrevisions-example-ns-main": "{{apihelp-example|query+allrevisions}}",
+	"apihelp-query+allrevisions-example-user": "{{apihelp-example|query+allrevisions}}",
 	"apihelp-query+alltransclusions-description": "{{doc-apihelp-description|query+alltransclusions}}",
 	"apihelp-query+alltransclusions-param-from": "{{doc-apihelp-param|query+alltransclusions|from}}",
 	"apihelp-query+alltransclusions-param-to": "{{doc-apihelp-param|query+alltransclusions|to}}",
